build_error.txt

> zerocog-landing@0.1.0 build
> vite build

vite v8.0.3 building client environment for production...
[2Ktransforming...✓ 2120 modules transformed.
✗ Build failed in 126ms
error during build:
Build failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unexpected token Delim('/')
255 |  .select-none { user-select: none; }
256 |  
257 |  .-translate-x-1/2 { transform: translateX(-50%); }
    |                 ^
258 |  .origin-left { transform-origin: left; }
259 |  .origin-right { transform-origin: right; }
    at Module.<anonymous> (/home/david/Zeroweb2/node_modules/lightningcss/node/index.js:56:14)
    at minifyCSS (file:///home/david/Zeroweb2/node_modules/vite/dist/node/chunks/node.js:21202:59)
    at async finalizeCss (file:///home/david/Zeroweb2/node_modules/vite/dist/node/chunks/node.js:21048:36)
    at async Promise.all (index 1)
    at async Object.run (file:///home/david/Zeroweb2/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (file:///home/david/Zeroweb2/node_modules/vite/dist/node/chunks/node.js:20587:19)
    at async plugin (file:///home/david/Zeroweb2/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1234:16)
    at async plugin.<computed> (file:///home/david/Zeroweb2/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1593:12)
    at aggregateBindingErrorsIntoJsError (file:///home/david/Zeroweb2/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:48:18)
    at unwrapBindingResult (file:///home/david/Zeroweb2/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:18:128)
    at #build (file:///home/david/Zeroweb2/node_modules/rolldown/dist/shared/rolldown-build-CPrIX9V6.mjs:3313:34)
    at async buildEnvironment (file:///home/david/Zeroweb2/node_modules/vite/dist/node/chunks/node.js:32849:64)
    at async Object.build (file:///home/david/Zeroweb2/node_modules/vite/dist/node/chunks/node.js:33271:19)
    at async Object.buildApp (file:///home/david/Zeroweb2/node_modules/vite/dist/node/chunks/node.js:33268:153)
    at async CAC.<anonymous> (file:///home/david/Zeroweb2/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}
